Testing with robolectric also